--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,11 @@ package-lock.json
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+package-lock.json
+yarn.lock
