--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ PORT=3000
 CHOKIDAR_USEPOLLING=true
 REACT_APP_API_BASE_URL=http://localhost:7777/v1
 REACT_APP_SOCKET_URL=http://localhost:7778
+REACT_APP_STREAM_URL=http://192.168.8.102:8081
