--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ REACT_APP_API_BASE_URL=http://localhost:7777/v1
 REACT_APP_SOCKET_URL=http://localhost:7778
 REACT_APP_SOCKET_PATH=
 REACT_APP_STREAM_URL=http://192.168.8.102:8081
+REACT_APP_CHECK_INTERVAL=20
