--- a/package.json
+++ b/package.json
@@ -26,18 +26,21 @@
     "flag-icon-css": "^3.2.1",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-app-polyfill": "^0.2.1",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.8.2",
+    "react-google-maps": "^9.4.5",
     "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-config": "^4.4.0-beta.6",
     "react-router-dom": "^4.3.1",
     "react-test-renderer": "^16.8.2",
     "reactstrap": "^7.1.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.1",
     "redux-dynamic-middlewares": "^1.0.0",
     "redux-promise-middleware": "^6.1.0",
