UI of drone controller designed completely

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ REACT_APP_SOCKET_PATH=
 REACT_APP_STREAM_URL=http://192.168.8.102:8081
 REACT_APP_CHECK_STATUS=TRUE
 REACT_APP_CHECK_INTERVAL=20
+REACT_APP_LOG_SOCKET=FALSE
