--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
+    "rc-slider": "^8.6.11",
     "react": "^16.8.2",
     "react-app-polyfill": "^0.2.1",
     "react-chartjs-2": "^2.7.4",
