Update battery percentage calculation

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ REACT_APP_STREAM_URL=http://192.168.8.102:8081
 REACT_APP_CHECK_STATUS=TRUE
 REACT_APP_CHECK_INTERVAL=20
 REACT_APP_LOG_SOCKET=FALSE
+REACT_APP_VOLTAGE_MIN=9
+REACT_APP_VOLTAGE_MAX=12.6
